--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="icon" type="image/png" href="http://smsmasterminds.com/images/uploads/favicon.png">
+
     <title>Fighter Finder</title>
 
     <!-- Custom CSS -->
@@ -16,6 +18,9 @@
 
     <!-- Custom JS -->
     <script src="js/server.js"></script>
+
+    <!-- P5 JS CDN -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.js"></script>
 
     <!-- Bootstrap CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
