--- a/index.html
+++ b/index.html
@@ -1,58 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
+  <meta charset="utf-8">
+  <title>Example</title>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <!-- Bootstrap CDN -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="icon" type="image/png" href="http://smsmasterminds.com/images/uploads/favicon.png">
+  <!-- Bootstrap MAXCDN  -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css" rel="stylesheet" integrity="sha384-awusxf8AUojygHf2+joICySzB780jVvQaVCAt1clU3QsyAitLGul28Qxb2r1e5g+" crossorigin="anonymous">
 
-    <title>Fighter Finder</title>
+  <!-- FontAwesome CDN -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- Custom JS -->
-    <script src="js/server.js"></script>
-
-    <!-- P5 JS CDN -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.js"></script>
-
-    <!-- Bootstrap CDN -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Bootstrap MAXCDN  -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css" rel="stylesheet" integrity="sha384-awusxf8AUojygHf2+joICySzB780jVvQaVCAt1clU3QsyAitLGul28Qxb2r1e5g+" crossorigin="anonymous">
-
-    <!-- FontAwesome CDN -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-
-    <!-- Custom CSS -->
-    <style>
-    body {
-        padding-top: 100px;
-        /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    }
-    </style>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+  <!-- Custom CSS -->
+  <link href="css/style.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
-
 <body style="background-color: #780001;">
 
     <!-- Navigation -->
-    <nav style="border-radius:0;" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <nav style="border-radius:0;" class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
@@ -61,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">MMA Finder</a>
+          <a class="navbar-brand" href="index.html">MMA Finder</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
          <ul class="nav navbar-nav">
@@ -76,60 +44,31 @@
       </div>
     </nav>
 
-    <!-- Page Content -->
     <div class="container parent-flex">
-
-      <div class="child-flex">
-        <div class="card">
-          <div class="row">
-            <img width="" src="http://b78b.http.cdn.softlayer.net/00B78B/thesweetscience/images/stories/boxing2/Cain_smll.jpg" class="img-fluid" alt="">
+      <div class="row">
+          <div id="images" class="col-md-4 col-xs-12 child-flex">
           </div>
-          <div class="card-block">
-            <h3 class="cards-title">Cain Velasquez</h3>
-            <hr>
-            <p class="card-text">Active/Inactive</p>
-            <p class="card-text">Weight Class</p>
-            <p class="card-text">Fight Record</p>
-            <p class="card-text">Country of Origin</p>
-          </div>
-        </div>
       </div>
-
-      <div class="child-flex">
-        <div class="card">
-          <div class="row">
-            <img width="" src="http://www2.cdn.sherdog.com/_images/pictures/20150903042713_5D3_6377.JPG" class="img-fluid" alt="">
-          </div>
-          <div class="card-block">
-            <h3 class="cards-title">Demetrious Johnson</h3>
-            <hr>
-            <p class="card-text">Active/Inactive</p>
-            <p class="card-text">Weight Class</p>
-            <p class="card-text">Fight Record</p>
-            <p class="card-text">Country of Origin</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="child-flex">
-        <div class="card">
-          <div class="row">
-            <img width="" src="http://media.ufc.tv/holly-holm-ufc-181-FOX_2238.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="card-block">
-            <h3 class="cards-title">Holly Holm</h3>
-            <hr>
-            <p class="card-text">Active/Inactive</p>
-            <p class="card-text">Weight Class</p>
-            <p class="card-text">Fight Record</p>
-            <p class="card-text">Country of Origin</p>
-
-          </div>
-        </div>
-      </div>
-
     </div>
 
-</body>
+<script>
+(function() {
+  var flickerAPI = "http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?";
+  $.getJSON( flickerAPI, {
+    tags: "mount rainier",
+    tagmode: "any",
+    format: "json"
+  })
+    .done(function( data ) {
+      $.each( data.items, function( i, item ) {
+        $( "<img>" ).attr( "src", item.media.m ).appendTo( "#images" );
+        if ( i === 3 ) {
+          return false;
+        }
+      });
+    });
+})();
+</script>
 
+</body>
 </html>
